--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>item3</li>
         <li>item4</li>
         <li>item5</li>
+        <li>item6</li>
     </ul>
     <img src="bela-paisagem-do-penhasco.jpg" alt="foto de um penhasco" width="400px">
     <br>
