cria estilizacoes com CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <style>
+      h1 {
+        width: 65px;
+        color: orange;
+      }
+      ul {
+        background-color: green;
+      }
+      .fundoPA {
+        background-color: aqua;
+      }
+    </style>
   </head>
   <body>
     <h1>Exercícios</h1>
@@ -14,19 +26,17 @@
         <li>item5</li>
         <li>item6</li>
     </ul>
+    <p class="fundoPA">Abaixo está uma imagem de um penhasco.</p>
+    <br>
+    <br>
     <img src="bela-paisagem-do-penhasco.jpg" alt="foto de um penhasco" width="400px">
     <br>
     <br>
-    <a href="#campo">ir para a foto do campo.</a>
+    <a class="fundoPA" href="#campo">ir para a foto do campo.</a>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <a href="https://www.globo.com/" target="_blank">Ir para globo.com</a>
-    <br>
-    <br>
-    <br>
+    <a class="fundoPA" href="https://www.globo.com/" target="_blank">Ir para globo.com</a>
     <br>
     <br>
     <br>
@@ -34,7 +44,10 @@
     <br>
     <br>
     <br>
-    <a href="https://www.betrybe.com/" target="_blank">Ir para o site da Trybe.</a>
+    <br>
+    <br>
+    <br>
+    <a class="fundoPA" href="https://www.betrybe.com/" target="_blank">Ir para o site da Trybe.</a>
     <br>
     <br>
     <br>
