estilizando com css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+      body{
+        font-size: 16px;
+      }
       h1 {
         width: 65px;
         color: orange;
+        font-family: sans-serif;
       }
       ul {
         background-color: green;
@@ -14,17 +18,43 @@
       .fundoPA {
         background-color: aqua;
       }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+      }
+      .lista {
+        font-size: 10px;
+      }
+      #l1 {
+        background-color: yellow;
+      }
+      #l2 {
+        background-color: pink;
+      }
+      #l3 {
+        background-color: purple;
+      }
+      #l4 {
+        background-color: brown;
+      }
+      #l5 {
+        background-color: red;
+      }
+      #l6 {
+        background-color: orange;
+      }
+      
     </style>
   </head>
   <body>
     <h1>Exercícios</h1>
     <ul>
-        <li>item1</li>
-        <li>item2</li>
-        <li>item3</li>
-        <li>item4</li>
-        <li>item5</li>
-        <li>item6</li>
+        <li class="lista" id="l1"><p>item1 - amarelo</p></li>
+        <li class="lista" id="l2"><p>item2 - rosa</p></li>
+        <li class="lista" id="l3"><p>item3 - roxo</p></li>
+        <li class="lista" id="l4"><p>item4 - marrom</p></li>
+        <li class="lista" id="l5"><p>item5 - vermelho</p></li>
+        <li class="lista" id="l6"><p>item6 - laranja</p></li>
     </ul>
     <p class="fundoPA">Abaixo está uma imagem de um penhasco.</p>
     <br>
