coloca a fonte de dupla opcao

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       h1 {
         width: 65px;
         color: orange;
-        font-family: sans-serif;
+        font-family: sans-serif, Arial;
       }
       ul {
         background-color: green;
