--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- link de ligacao do css -->
     <style>
-      body{
+      /* body{
         font-size: 16px;
       }
       h1 {
@@ -43,7 +44,7 @@
       #l6 {
         background-color: orange;
       }
-      
+       */
     </style>
   </head>
   <body>
